# easy-ssh-tui

./: CHANGELOG.md  Cargo.toml  README.md  release.sh
.github/workflows/: release.yml
src/: app.rs  main.rs  ssh.rs  ui.rs
